# Serial

./: CMakeLists.txt  main.cpp  test_anotherIncluder.cpp
include/serial/: Archiver.hpp  EnableIf.hpp  EndianAdapter.hpp  FunctionExistenceChecker.hpp  STL.hpp  STL_decl.hpp  STL_impl.hpp  basic.hpp  single_include.hpp
include/util/: Buffer.hpp  FunctionExistenceChecker.hpp  MemberExistenceChecker.hpp  endian.hpp
src/: Buffer.cpp  basic.cpp
